# sbh-mouse-rag

./: .gitignore  README.md  main.py  pyproject.toml
allen/: allen.py
dataset/: __init__.py  builder.py  config.py  create.py  data_loader.py  loader.py  requirement  schema.py
eval/: config.py  evaluator.py  metrics.py  report.py  run.py  stats.py
index/: builder.py  config.py  create.py  geom.py  patch_index.py  run.sh  search.py  searcher.py  store.py  utils.py  vis.py  visual.py
index/model/: dino.py
index/reranker/: __init__.py  config.py  data.py  dataset.py  model.py  runtime.py  trainer.py
scripts/: create_dataset.py  create_index.py  create_reranker_dataset.py  run_eval.py  run_report.py  search_index.py  train_reranker.py  volume_usage.py
scripts/paper/: allen_bg_fg_ratio.py  make_pipeline_figure.py
scripts/register/: find_best_orientation.py  resample_real_to_25um.py  view_registration_napari.py
scripts/tests/: rotation_problem.py
volume/: slice_utils.py  usage.py  volume_helper.py
